--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!doctype html>
 <html>
-  <head>
-    <style>
-      .is-valid{
-        border-color: green;
-      }
-      .not-valid{
-        border-color: red;
-      }
-    </style>
-  </head>
-  <body>
+<head>
+	<title>simple-validation.js</title>
+	<link rel="stylesheet" href="simple-validation.css">
+</head>
+<body>
+	<h3>This form will validate</h3>
+	<form>
+		<input type="text" name="name" placeholder="name">
+		<input type="email" name="email" placeholder="email">
+		<input class="novalidate" type="text" name="ssn" placeholder="ssn (optional)">
 
-    <form class="validate-form">
-      <div>
-        <input type="email" placeholder="Email" class="validate" required/>
-        <input type="text" placeholder="Text" class="validate" required/>
-      </div>
-      <button class="submit">submit</button>
-    </form>
+		<input type="submit" value="submit">
+	</form>
 
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
-    <script src="simple-validation.js" type="text/javascript"></script>
-  </body>
+	<h3>This form will not validate</h3>
+	<form novalidate>
+		<input type="text" name="name" placeholder="name">
+		<input type="email" name="email" placeholder="email">
+		<input class="novalidate" type="text" name="ssn" placeholder="ssn (optional)">
+
+		<input type="submit" value="submit">
+	</form>
+
+	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+	<script src="simple-validation.js"></script>
+</body>
 </html>
