Added logic to check for input type when validating.
It already checked to make sure that the input[type] was text or email,
but I forgot to make sure it checks to see if a form input was even an
[input] element. Now it checks to see if it is an [input] element or a
[textarea]. Also updated the css to look a little better and added
textareas to the form to demonstrate how they work.

--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
 <body>
 	<h3>This form will validate</h3>
 	<form>
-		<input type="text" name="name" placeholder="name">
-		<input type="email" name="email" placeholder="email">
-		<input class="novalidate" type="text" name="ssn" placeholder="ssn (optional)">
+		<input type="text" name="name" placeholder="name"><br>
+		<input type="email" name="email" placeholder="email"><br>
+		<input class="novalidate" type="text" name="ssn" placeholder="ssn (optional)"><br>
+		<textarea name="comment" placeholder="comment"></textarea><br>
 
 		<input type="submit" value="submit">
 	</form>
 
 	<h3>This form will not validate</h3>
 	<form novalidate>
-		<input type="text" name="name" placeholder="name">
-		<input type="email" name="email" placeholder="email">
-		<input class="novalidate" type="text" name="ssn" placeholder="ssn (optional)">
+		<input type="text" name="name" placeholder="name"><br>
+		<input type="email" name="email" placeholder="email"><br>
+		<input class="novalidate" type="text" name="ssn" placeholder="ssn (optional)"><br>
+		<textarea name="comment" placeholder="comment"></textarea><br>
 
 		<input type="submit" value="submit">
 	</form>
