Adding attribution to seem less narcissistic.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<header>
 		<div class="wrap">
-			<h1>simple-validation.js (<a href="https://github.com/drmyersii/simple-validation">view on github</a>)</h1>
+			<h1>simple-validation.js (<a href="https://github.com/chdhmphry/simple-validation">view on github</a>)</h1>
 			<h2>extremely simple form validation with jQuery</h2>
 		</div>
 	</header>
@@ -44,7 +44,7 @@
 	</main>
 	<footer>
 		<div class="wrap">
-			<h4>This page is maintained by David Myers (<a href="https://github.com/drmyersii">drmyersii</a>)</h4>
+			<h4>This page is maintained by David Myers (<a href="https://github.com/drmyersii">drmyersii</a>) and Chad Humphrey (<a href="https://github.com/chdhmphry">chdhmphry</a>)</h4>
 		</div>
 	</footer>
 
