Added checkbox validation! Woohoo!
That was one of the validations I thought might be a bit more challenging.
It is finished though, and that means radio validation shouldn't be much
longer either! Currently, the way checkbox validation works is that every
checkbox has a validation event. If a checkbox has a name attribute, it
then has a family including all checkboxes under that form with the same
name. The validation then checks to see if any of the family has a
required attribute, and if so, the entire family becomes required to have
at least one box checked. If not, none of the boxes have to be checked.
Now, if the checkboxes are not a part of the same family, then checking
one will still not clear another if it is required as well. Also, if they
are not a part of the same family, requiring one will not require the
others. You may add the required attribute to all of the checkboxes under
the same family if you wish, but it isn't necessary for the validation to
work properly.

--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
 			<form>
 				<fieldset>
 					<legend>This form will validate</legend>
-					<input type="text" name="name" placeholder="name"><br>
-					<input type="email" name="email" placeholder="email"><br>
-					<input class="novalidate" type="text" name="ssn" placeholder="ssn (optional)"><br>
-					<textarea name="comment" placeholder="comment"></textarea><br>
+					<input type="text" name="name" placeholder="name" required><br>
+					<input type="email" name="email" placeholder="email" required><br>
+					<input class="novalidate" type="email" name="email_verify" placeholder="verify email (optional) (not validated)"><br>
+					<input type="text" name="ssn" placeholder="ssn (optional)"><br>
+					<textarea name="comment" placeholder="comment" required></textarea><br>
+
+					<legend>Select all that you like: </legend>
+					<label><input type="checkbox" name="things_that_you_like" required><span>Dogs</span></label><br>
+					<label><input type="checkbox" name="things_that_you_like"><span>Cats</span></label><br>
+					<label><input type="checkbox" name="things_that_you_like"><span>Turtles</span></label><br>
 
 					<input type="submit" value="submit">
 				</fieldset>
